[gd_scene load_steps=9 format=3 uid="uid://b30nllnfkvlpa"]

[ext_resource type="Script" path="res://src/Main.gd" id="1_kawq1"]
[ext_resource type="PackedScene" uid="uid://c65yo83m0mymi" path="res://src/Player.tscn" id="2_vtl2i"]
[ext_resource type="Texture2D" uid="uid://bt1rpg2uj1bod" path="res://icon.svg" id="2_x60ry"]
[ext_resource type="Script" path="res://src/NPC.gd" id="4_7rt1h"]
[ext_resource type="PackedScene" uid="uid://dq4kio8vt8hy8" path="res://src/EncounterArea.tscn" id="5_mg6br"]

[sub_resource type="CircleShape2D" id="CircleShape2D_75hbv"]
radius = 61.2944

[sub_resource type="CircleShape2D" id="CircleShape2D_ttr6j"]
radius = 81.2158

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tu36y"]
size = Vector2(433, 280)

[node name="Main" type="Node2D"]
script = ExtResource("1_kawq1")

[node name="MapNode" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource("2_vtl2i")]

[node name="NPC" type="StaticBody2D" parent="."]
position = Vector2(575, 321)
collision_layer = 2
script = ExtResource("4_7rt1h")
dialogue = "<null>"

[node name="Sprite2D" type="Sprite2D" parent="NPC"]
texture = ExtResource("2_x60ry")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC"]
shape = SubResource("CircleShape2D_75hbv")

[node name="TalkArea" type="Area2D" parent="NPC"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/TalkArea"]
shape = SubResource("CircleShape2D_ttr6j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -124.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_right = 5

[node name="DayLabel" type="Label" parent="CanvasLayer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sunday, July 5th
Afternoon"
horizontal_alignment = 2

[node name="MenuNode" type="Node" parent="."]

[node name="DialogueNode" type="Node" parent="."]

[node name="BattleNode" type="Node" parent="."]

[node name="EncounterArea" parent="." instance=ExtResource("5_mg6br")]
encounter_rates = {
"Rat": 0.4,
"Slime": 0.6
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EncounterArea"]
position = Vector2(344, 155)
shape = SubResource("RectangleShape2D_tu36y")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
